# front/src/api/models/index.ts
@@ -3,8 +3,10 @@
 export * from './ApiResultResponse';
 export * from './AuthInfoResponse';
 export * from './ChangePasswordRequest';
+export * from './ErrorCode';
 export * from './LoginRequest';
 export * from './LoginResponse';
 export * from './Page';
 export * from './User';
 export * from './UserListResponse';
+export * from './UserType';
