# server/src/routes/auth.ts
@@ -7,6 +7,7 @@ import { LoginRequest } from 'api/models/LoginRequest'
 import { LoginResponse } from 'api/models/LoginResponse'
 import { AuthInfoResponse } from 'api/models/AuthInfoResponse'
 import { ApiResultResponse } from 'api/models/ApiResultResponse'
+import { ChangePasswordRequest, ErrorCode } from 'api/models'
 
 const router = express.Router()
 
@@ -35,22 +36,29 @@ router.post('/login', async function (req: express.Request, res: express.Respons
       return
     }
 
-    if ((user.password?.length ?? 0) > 0 && user?.password === input.password) {
-      req.session.loggedIn = true
-      req.session.userId = user.id
-      req.session.account = user.account
-      const output = { success: true, redirectUrl: "/", loggedIn: true, userId: user.id, account: user.account } as LoginResponse
-      console.log("login success. account=" + input.account + " ip=" + req.ip)
-      res.json(output)
+    if (user.password === undefined || user.password === null || (user.password?.length ?? 0) === 0 || user.password !== input.password) {
+      res.statusCode = 401
+      res.json(errorOutput)
       return
     }
 
-    res.statusCode = 401
-    res.json(errorOutput)
+    req.session.loggedIn = true
+    req.session.userId = user.id
+    req.session.account = user.account
+    const output = {
+      success: true,
+      redirectUrl: "/",
+      loggedIn: true,
+      userId: user.id,
+      account: user.account,
+      userType: user.userType
+    } as LoginResponse
+    console.log("login success. account=" + input.account + " ip=" + req.ip)
+    res.json(output)
   }
   catch (ex) {
     res.statusCode = 500
-    res.json({ success: false, code: "Server Error" } as ApiResultResponse)
+    res.json({ success: false, status: 500, code: ErrorCode.ServerError } as ApiResultResponse)
   }
 });
 
@@ -71,6 +79,66 @@ router.post('/logout', async function (req: express.Request, res: express.Respon
     req.session.cookie.expires = new Date(1980, 1, 1)
   }
   res.json({ success: true, code: "SUCCESS" } as ApiResultResponse)
+});
+
+function getAuthInfo(req: express.Request) {
+  return { loggedIn: req.session?.loggedIn ?? false, userId: req.session?.userId, account: req.session?.account } as AuthInfoResponse
+}
+
+router.post('/change-password', async function (req: express.Request, res: express.Response, next: express.NextFunction) {
+  const input = req.body as ChangePasswordRequest
+
+  const authInfo = getAuthInfo(req)
+
+  const errorOutput = { success: false, status: 401, code: ErrorCode.Unauthorized } as ApiResultResponse
+
+  if (!authInfo.loggedIn) {
+    res.status(401)
+    errorOutput.message = "Login required."
+    res.json(errorOutput)
+    return
+  }
+
+  try {
+    const user = await ServerContext.dataSource.manager.findOneBy<UserEntity>(UserEntity, { account: authInfo.account })
+    if (user === undefined || user === null || user.account !== authInfo.account || user.disabled) {
+      res.statusCode = 500
+      errorOutput.status = 500
+      errorOutput.code = ErrorCode.ServerError
+      errorOutput.message = "Invalid user."
+      res.json(errorOutput)
+      return
+    }
+
+    if (input.newPassword === undefined || input.newPassword === null || input.newPassword.length < 8) {
+      res.statusCode = 400
+      errorOutput.status = 400
+      errorOutput.code = ErrorCode.BadRequest
+      errorOutput.message = "Invalid password."
+      res.json(errorOutput)
+      return
+    }
+
+    if (user?.password !== input.oldPassword) {
+      res.statusCode = 403
+      errorOutput.status = 403
+      errorOutput.code = ErrorCode.Forbidden
+      errorOutput.message = "Invalid password."
+      res.json(errorOutput)
+      return
+    }
+
+    user.password = input.newPassword
+
+    await ServerContext.dataSource.manager.save(user)
+
+    const successOutput = { success: true, status: 200, code: ErrorCode.Success } as ApiResultResponse
+    res.json(successOutput)
+  }
+  catch (ex) {
+    res.statusCode = 500
+    res.json({ success: false, status: 500, code: ErrorCode.ServerError } as ApiResultResponse)
+  }
 });
 
 module.exports = router;
