# server/src/routes/users.ts
@@ -2,7 +2,7 @@ import ServerContext from 'web/ServerContext';
 import UserEntity from 'databases/entities/UserEntity';
 import express from 'express';
 import { User } from 'api/models/User';
-import { ApiResultResponse, UserListResponse } from 'api/models';
+import { ApiResultResponse, ErrorCode, UserListResponse } from 'api/models';
 
 const router = express.Router();
 
@@ -28,13 +28,21 @@ router.get('/:id', async function (req: express.Request, res: express.Response, 
 });
 
 router.put('/', async function (req: express.Request, res: express.Response, next: express.NextFunction) {
-  try {
-    const input = req.body as User
+  const input = req.body as User
 
+  try {
     let user = new UserEntity()
     user.account = input.account
     user.email = input.email
+    if (user.email === "") {
+      user.email = undefined
+    }
     user.userName = input.userName
+    user.userType = input.userType
+    user.disabled = input.disabled ?? false
+    if (input.password !== undefined && input.password.length > 0) {
+      user.password = input.password
+    }
 
     user = await ServerContext.dataSource.manager.save(user)
 
@@ -42,8 +50,9 @@ router.put('/', async function (req: express.Request, res: express.Response, nex
     res.json(output)
   }
   catch (ex) {
+    console.error("user regist failed. account=" + input.account, ex)
     res.statusCode = 500
-    res.json({ success: false, code: "Server Error" } as ApiResultResponse)
+    res.json({ success: false, status: 500, code: ErrorCode.ServerError } as ApiResultResponse)
   }
 });
 
@@ -51,20 +60,35 @@ router.patch('/:id', async function (req: express.Request, res: express.Response
   const id = req.params["id"]
   const input = req.body as User
 
-  const userId = parseInt(id)
-  let user = await ServerContext.dataSource.manager.findOneBy(UserEntity, { id: userId })
-  if (user === null || user === undefined) {
-    res.sendStatus(404)
-    return
+  try {
+    const userId = parseInt(id)
+    let user = await ServerContext.dataSource.manager.findOneBy(UserEntity, { id: userId })
+    if (user === null || user === undefined) {
+      res.sendStatus(404)
+      return
+    }
+
+    user.email = input.email
+    user.userName = input.userName
+    if (user.email === "") {
+      user.email = null as any
+    }
+    user.userType = input.userType
+    user.disabled = input.disabled ?? false
+    if (input.password !== undefined && input.password.length > 0) {
+      user.password = input.password
+    }
+
+    user = await ServerContext.dataSource.manager.save(user)
+
+    const output = { id: user.id, account: user.account, email: user.email, userName: user.userName, userType: user.userType } as User
+    res.json(output)
   }
-
-  user.email = input.email
-  user.userName = input.userName
-
-  user = await ServerContext.dataSource.manager.save(user)
-
-  const output = { id: user.id, account: user.account, email: user.email, userName: user.userName, userType: user.userType } as User
-  res.json(output)
+  catch (ex) {
+    console.error("user update failed. account=" + input.account, ex)
+    res.statusCode = 500
+    res.json({ success: false, status: 500, code: ErrorCode.ServerError } as ApiResultResponse)
+  }
 });
 
 module.exports = router;
